# stoatchat

./: CHANGELOG.md  Cargo.toml  README.md  Voxly.toml  clippy.toml  compose.yml  deny.toml  release-please-config.json
.github/workflows/: docker.yaml  git-town.yml  rust.yaml
.mise/tasks/docker/: start  stop
crates/bonfire/: Cargo.toml  Dockerfile
crates/bonfire/src/: config.rs  database.rs  main.rs  websocket.rs
crates/bonfire/src/events/: impl.rs  state.rs
crates/core/coalesced/: Cargo.toml
crates/core/coalesced/src/: lib.rs
crates/core/config/: Cargo.toml  Revolt.toml  Voxly.toml
crates/core/config/src/: lib.rs
crates/core/database/: Cargo.toml
crates/core/database/src/: lib.rs
crates/core/database/src/amqp/: amqp.rs
crates/core/database/src/drivers/: mod.rs  mongodb.rs
crates/core/database/src/events/: client.rs  rabbit.rs
crates/core/database/src/models/: mod.rs
crates/core/database/src/models/bots/: model.rs  ops.rs
crates/core/database/src/models/channel_invites/: model.rs  ops.rs
crates/core/database/src/models/channel_unreads/: ops.rs
crates/core/database/src/models/channel_webhooks/: model.rs  ops.rs
crates/core/database/src/models/channels/: model.rs  ops.rs
crates/core/database/src/models/emojis/: model.rs  ops.rs
crates/core/database/src/tasks/: ack.rs  process_embeds.rs
crates/core/database/src/util/: bulk_permissions.rs  funcs.rs  idempotency.rs  mod.rs  permissions.rs  reference.rs  utoipa.rs
crates/core/database/src/voice/: mod.rs  voice_client.rs
crates/core/files/: Cargo.toml
crates/core/files/src/: lib.rs
crates/core/files/src/implementation/: encryption_impl.rs  media_impl.rs  s3_impl.rs
crates/core/files/tests/: integration_test.rs  s3_test.rs
crates/core/models/: Cargo.toml
crates/core/models/src/: lib.rs
crates/core/models/src/v0/: bots.rs  channel_webhooks.rs  channels.rs  config.rs  emojis.rs  messages.rs  mod.rs  servers.rs  users.rs
crates/core/parser/: Cargo.toml
crates/core/permissions/: Cargo.toml
crates/core/permissions/src/models/: channel.rs  mod.rs  server.rs
crates/core/presence/: Cargo.toml
crates/core/presence/src/: lib.rs
crates/core/ratelimits/: Cargo.toml
crates/core/ratelimits/src/: axum.rs  rocket.rs
crates/core/result/: Cargo.toml
crates/core/result/src/: lib.rs  okapi.rs
crates/daemons/crond/: Cargo.toml  Dockerfile
crates/daemons/crond/src/: main.rs
crates/daemons/crond/src/tasks/: file_deletion.rs  prune_dangling_files.rs  prune_members.rs
crates/daemons/pushd/: Cargo.toml  Dockerfile
crates/daemons/pushd/src/: main.rs
crates/daemons/voice-ingress/: Cargo.toml  Dockerfile
crates/daemons/voice-ingress/src/: api.rs  guard.rs  main.rs
crates/delta/: Cargo.toml  Dockerfile
crates/delta/src/: main.rs
crates/delta/src/routes/: mod.rs  root.rs
crates/delta/src/routes/bots/: create.rs  delete.rs  edit.rs  fetch.rs  fetch_owned.rs  fetch_public.rs  invite.rs  mod.rs
crates/delta/src/routes/channels/: channel_ack.rs  channel_delete.rs  channel_edit.rs  channel_fetch.rs  group_add_member.rs  group_create.rs  group_remove_member.rs  invite_create.rs  members_fetch.rs  message_bulk_delete.rs  message_clear_reactions.rs  message_delete.rs  message_edit.rs  message_fetch.rs  message_pin.rs  message_query.rs  message_react.rs  message_search.rs  message_send.rs  message_unpin.rs  message_unreact.rs  mod.rs  permissions_set.rs  permissions_set_default.rs  voice_join.rs  voice_stop_ring.rs  webhook_create.rs  webhook_fetch_all.rs
crates/delta/src/routes/customisation/: emoji_create.rs  emoji_delete.rs  emoji_fetch.rs  mod.rs
crates/delta/src/routes/invites/: invite_delete.rs  invite_fetch.rs  invite_join.rs  mod.rs
crates/delta/src/routes/onboard/: complete.rs  hello.rs  mod.rs
crates/delta/src/routes/policy/: acknowledge_policy_changes.rs  mod.rs
crates/delta/src/routes/push/: mod.rs  subscribe.rs  unsubscribe.rs
crates/delta/src/routes/safety/: mod.rs  report_content.rs
crates/delta/src/routes/servers/: ban_create.rs  ban_list.rs  ban_remove.rs  channel_create.rs  emoji_list.rs  invites_fetch.rs  member_edit.rs  member_experimental_query.rs  member_fetch.rs  member_fetch_all.rs  member_remove.rs  mod.rs  permissions_set.rs  permissions_set_default.rs  roles_create.rs  roles_delete.rs  roles_edit.rs  roles_edit_positions.rs  roles_fetch.rs  server_ack.rs  server_create.rs  server_delete.rs  server_edit.rs  server_fetch.rs
crates/delta/src/routes/sync/: get_settings.rs  get_unreads.rs  mod.rs  set_settings.rs
crates/delta/src/routes/users/: add_friend.rs  block_user.rs  change_username.rs  edit_user.rs  fetch_dms.rs  fetch_profile.rs  fetch_self.rs  fetch_user.rs  fetch_user_flags.rs  find_mutual.rs  get_default_avatar.rs  mod.rs  open_dm.rs  remove_friend.rs  send_friend_request.rs  unblock_user.rs
crates/delta/src/routes/webhooks/: mod.rs  webhook_delete.rs  webhook_delete_token.rs  webhook_edit.rs  webhook_edit_token.rs  webhook_execute.rs  webhook_execute_github.rs  webhook_fetch.rs  webhook_fetch_token.rs
crates/delta/src/util/: ratelimits.rs  test.rs
crates/services/autumn/: Cargo.toml  Dockerfile
crates/services/autumn/src/: api.rs  clamav.rs  exif.rs  main.rs  metadata.rs  mime_type.rs  ratelimits.rs
crates/services/gifbox/: Cargo.toml  Dockerfile
crates/services/gifbox/src/: main.rs  ratelimits.rs
crates/services/gifbox/src/routes/: categories.rs  search.rs  trending.rs
crates/services/gifbox/src/tenor/: mod.rs
crates/services/january/: Cargo.toml  Dockerfile
crates/services/january/src/: api.rs  main.rs  requests.rs  website_embed.rs
docs/: docusaurus.config.ts  sidebars.ts
docs/docs/: faq.md  help.md  index.md
docs/docs/developers/: endpoints.md  legacy-plugin-api.md  libraries.md  stoat-migration-guide.md
docs/docs/developers/api/: _category_.json  ratelimits.md
docs/docs/developers/events/: _category_.json  establishing.md
docs/docs/developing/: contrib.md
docs/docs/developing/backend/: _category_.json  new_features.md
scripts/: publish-debug-image.sh
(+74 files in other folders)
