[package]
name = "voxly-bonfire"
version = "0.11.5"
license = "AGPL-3.0-or-later"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# util
log = "*"
sentry = "0.31.5"
lru = "0.7.6"
ulid = "0.5.0"
once_cell = "1.9.0"
redis-kiss = "0.1.4"
lru_time_cache = "0.11.11"
async-channel = "2.3.1"

# parsing
querystring = "1.1.0"
regex = "1.11.1"

# serde
bincode = "1.3.3"
serde_json = "1.0.79"
rmp-serde = "1.0.0"
serde = "1.0.136"

# async
futures = "0.3.21"
async-tungstenite = { version = "0.17.0", features = ["async-std-runtime"] }
async-std = { version = "1.8.0", features = [
    "tokio1",
    "tokio02",
    "attributes",
] }

# core
authifier = { version = "1.0.16" }
voxly-result = { path = "../core/result" }
voxly-models = { path = "../core/models" }
voxly-config = { path = "../core/config" }
voxly-database = { path = "../core/database", features = ["voice"] }
voxly-permissions = { path = "../core/permissions" }
voxly-presence = { path = "../core/presence", features = ["redis-is-patched"] }

# redis
fred = { version = "8.0.1", features = ["subscriber-client"] }
