[package]
name = "voxly-coalesced"
version = "0.11.5"
edition = "2021"
license = "MIT"
authors = ["Paul Makles <me@insrt.uk>", "Zomatree <me@zomatree.live>"]
description = "Voxly Backend: Coalescion service"
repository = "https://github.com/voxly-gg/stoatchat"

[features]
tokio = ["dep:tokio"]
queue = ["dep:indexmap"]
cache = ["dep:lru"]

default = ["tokio"]

[dependencies]
tokio = { version = "1.47.0", features = ["sync"], optional = true }
indexmap = { version = "2.13.0", optional = true }
lru = { version = "0.16.3", optional = true }

[dev-dependencies]
tokio = { version = "1.47.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
] }
