[package]
name = "revolt-models"
version = "0.8.9"
edition = "2021"
license = "MIT"
authors = ["Paul Makles <me@insrt.uk>"]
description = "Revolt Backend: API Models"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde", "revolt-permissions/serde", "indexmap/serde"]
validator = ["dep:validator"]
rocket = ["dep:rocket"]
partials = ["dep:revolt_optional_struct", "serde", "utoipa"]

default = ["serde", "partials", "rocket"]

[dependencies]
# Core
revolt-config = { version = "0.8.9", path = "../config" }
revolt-permissions = { version = "0.8.9", path = "../permissions", features = [
    "utoipa",
] }

# Utility
regex = "1.11"
indexmap = "2.12.0"
once_cell = "1.17.1"
num_enum = "0.6.1"

# Rocket
rocket = { optional = true, version = "0.5.0-rc.2", default-features = false }

# Serialisation
revolt_optional_struct = { version = "0.2.0", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
iso8601-timestamp = { version = "0.4.0", features = ["utoipa", "bson"] }

# Spec Generation
utoipa = { version = "5.4.0", features = ["indexmap"], optional = true }

# Validation
validator = { version = "0.16.0", optional = true, features = ["derive"] }
