[package]
name = "voxly-ratelimits"
version = "0.11.5"
edition = "2024"
license = "MIT"
authors = ["Zomatree <me@zomatree.live>", "Paul Makles <me@insrt.uk>"]
description = "Voxly Backend: Ratelimit Handler"
repository = "https://github.com/voxly-gg/stoatchat"

[features]
rocket = [
    "dep:rocket",
    "dep:revolt_rocket_okapi",
    "voxly-database/rocket-impl",
]
axum = ["dep:axum", "voxly-database/axum-impl"]

default = ["rocket", "axum"]

[dependencies]
voxly-database = { version = "0.11.5", path = "../database" }
voxly-result = { version = "0.11.5", path = "../result" }
voxly-config = { version = "0.11.5", path = "../config" }

rocket = { version = "0.5.1", optional = true }
revolt_rocket_okapi = { version = "0.10.0", optional = true }

axum = { version = "0.7.5", optional = true, features = ["macros"] }

serde = { version = "1", features = ["derive"] }
authifier = { version = "1.0.16" }
dashmap = "5.2.0"
async-trait = "0.1.81"
log = "0.4"
