[package]
name = "revolt-gifbox"
version = "0.8.9"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
# Serialisation
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.68"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web requests
reqwest = { version = "0.12", features = ["json"] }

# Core crates
revolt-config = { version = "0.8.9", path = "../../core/config" }
revolt-models = { version = "0.8.9", path = "../../core/models" }
revolt-result = { version = "0.8.9", path = "../../core/result", features = [
    "utoipa",
    "axum",
] }
revolt-coalesced = { version = "0.8.9", path = "../../core/coalesced", features = [
    "queue",
] }
revolt-database = { version = "0.8.9", path = "../../core/database", features = [
    "axum-impl",
] }
revolt-ratelimits = { version = "0.8.9", path = "../../core/ratelimits", features = [
    "axum",
] }

# Axum / web server
axum = { version = "0.8.6" }
axum-extra = { version = "0.12.1", features = ["typed-header"] }

# OpenAPI & documentation generation
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa = { version = "5.4.0", features = ["ulid"] }

# Logging
tracing = "0.1"

# Utils
lru_time_cache = "0.11.11"
