[package]
name = "voxly-gifbox"
version = "0.11.5"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
# Serialisation
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.68"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web requests
reqwest = { version = "0.12", features = ["json"] }

# Core crates
voxly-config = { version = "0.11.5", path = "../../core/config" }
voxly-models = { version = "0.11.5", path = "../../core/models" }
voxly-result = { version = "0.11.5", path = "../../core/result", features = [
    "utoipa",
    "axum",
] }
voxly-coalesced = { version = "0.11.5", path = "../../core/coalesced", features = [
    "queue",
] }
voxly-database = { version = "0.11.5", path = "../../core/database", features = [
    "axum-impl",
] }
voxly-ratelimits = { version = "0.11.5", path = "../../core/ratelimits", features = [
    "axum",
] }

# Axum / web server
axum = { version = "0.7.5" }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5.2", features = ["cors"] }

# OpenAPI & documentation generation
utoipa-scalar = { version = "0.1.0", features = ["axum"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "ulid"] }

# Logging
tracing = "0.1"

# Utils
lru_time_cache = "0.11.11"
